scrollbar style update, track item shadow, and player stop at end of the playlist

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   width: min(550px, 100%);
   margin-inline: auto;
   padding: 8px 12px;
-  background: linear-gradient(0deg, #4A2B16, #A16742);
+  background: linear-gradient(0deg, #4a2b16, #a16742);
 }
 
 .logo {
@@ -29,7 +29,7 @@ body {
 .search {
   font-family: Ubuntu, sans-serif;
   width: 100%;
-  background: linear-gradient(45deg, #4A2B16, #A16742);
+  background: linear-gradient(45deg, #4a2b16, #a16742);
   border-width: 0;
   padding: 4px;
   margin-bottom: 12px;
@@ -37,12 +37,12 @@ body {
 }
 
 ::placeholder {
-  color: #A16742;
+  color: #a16742;
 }
 
 #currentPlaylist {
   margin-bottom: 4px;
-  color: #bb8f71;
+  color: #d59367;
 }
 
 #currentSongTitle {
@@ -53,12 +53,12 @@ body {
 #playbackControls {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 button {
   font-family: Ubuntu, sans-serif;
-  padding: 8px;
+  padding: 0;
   margin-block: 4px;
   font-size: 22px;
   cursor: pointer;
@@ -88,7 +88,7 @@ button {
     position: absolute;
     content: "--- Select a song to play ---";
     font-size: 20px;
-    color: #A16742;
+    color: #a16742;
     width: 100%;
     text-align: center;
     padding-top: 14px;
@@ -107,7 +107,7 @@ button {
   width: 100%;
   cursor: pointer;
   border: none;
-  background: linear-gradient(45deg, #4A2B16, #A16742);
+  background: linear-gradient(45deg, #4a2b16, #a16742);
 }
 
 .accordion-content {
@@ -121,12 +121,13 @@ button {
 .track-item {
   padding: 5px;
   cursor: pointer;
-  background: linear-gradient(120deg, #4A2B16, #A16742);
+  background: linear-gradient(120deg, #4a2b16, #a16742);
   border-radius: 8px;
   flex-basis: min(104px, calc(33% - 5px));
   flex-shrink: 0;
   min-height: 70px;
   color: #fff;
+  box-shadow: 3px 1px 3px #4a2b16;
 }
 
 .track-item:hover {
@@ -138,4 +139,19 @@ button {
   width: 100%;
   position: relative;
   z-index: 1;
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.4rem;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4a2b16;
+  outline: 1px solid #a16742;
+  border-radius: 8px;
 }
